--- a/.github/workflows/docker-build-test-upload.yml
+++ b/.github/workflows/docker-build-test-upload.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Pull ubuntu:22.04 image 📥
         if: ${{ inputs.parentImage == '' }}
-        run: docker pull ubuntu:22.04
+        run: docker pull nvidia/cuda:12.2.0-devel-ubuntu22.04
         shell: bash
 
       - name: Build image 🛠
